# app/Http/Controllers/API/ClientController.php
@@ -1,0 +1,142 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+use App\Client;
+use Validator;
+use App\Http\Resources\ClientsResource;
+
+class ClientController extends Controller
+{
+    /**
+     * Display a listing of the resource.
+     *
+     * @return \Illuminate\Http\Response
+     *
+     * @SWG\Get(
+     *     path="/api/clients",
+     *     tags={"Clients"},
+     *     summary="List Clients",
+     *     @SWG\Response(
+     *          response=200,
+     *          description="Success: List all Clients",
+     *          @SWG\Schema(ref="#/definitions/Client")
+     *      ),
+     *     @SWG\Response(
+     *          response="404",
+     *          description="Not Found"
+     *     ),
+     *     @SWG\Response(
+	 * 			response="405",
+	 * 			description="Invalid HTTP Method"
+	 *      )
+     * ),
+     */
+    public function index()
+    {
+        $listClients = Client::all();
+        return $listClients;
+        // Using Paginate method We explain this later in the book
+        // return ClientsResource::collection(Bike::with('ratings')->paginate(10));
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     * 
+     * @SWG\Post(
+     *     path="/api/Clients",
+     *     tags={"Clients"},
+     *     summary="Create Client",
+     *     @SWG\Parameter(
+     * 			name="body",
+     * 			in="body",
+     * 			required=true,
+     * 			@SWG\Schema(ref="#/definitions/Client"),
+     * 			description="Json format",
+     * 		),
+     *     @SWG\Response(
+     *          response=201,
+     *          description="Success: A Newly Created Client",
+     *          @SWG\Schema(ref="#/definitions/Client")
+     *      ),
+     *     @SWG\Response(
+     *          response=401,
+     *          description="Refused: Unauthenticated"
+     *     ),
+     *     @SWG\Response(
+     *          response="422",
+     *          description="Missing mandatory field"
+     *     ),
+     *     @SWG\Response(
+     *          response="404",
+     *          description="Not Found"
+     *     ),
+     *     @SWG\Response(
+	 * 			response="405",
+	 * 			description="Invalid HTTP Method"
+	 *      ),
+	 *      security={
+	 * 		   { "api_key":{} }
+	 * 		}
+     * ),
+     */
+    public function store(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'name' => 'required',
+            'phone_number' => 'required'
+        ]);
+        if ($validator->fails()) {
+            return response()->json($validator->errors(), 422);
+        }
+
+        // Creating a record in a different way
+        $createClient = Client::create([
+            'name' => $request->name,
+            'phone_number' => $request->phone_number,
+            'email' => $request->email,
+            'dept' => $request->dept,
+        ]);
+        return $createClient;
+        //return new ClientResource($createClient);
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy($id)
+    {
+        //
+    }
+}
